# virtual-fs

./: Cargo.toml  LICENSE  README.md
src/: error.rs  file.rs  lib.rs  mountable_fs.rs  roc_fs.rs  tar_fs.rs  tree.rs  util.rs  zip_fs.rs
src/memory_fs/: entry.rs  file.rs  mod.rs
src/physical_fs/: mod.rs  path_resolver.rs
test/: deep_fs.tar.xz  empty.tar.xz  not_empty.tar.xz
