[package]
name = "virtual-filesystem"
authors = ["Andrew Buck <mrelectrify@warsaw-revamped.com>"]
description = "A virtual filesystem implemented in Rust."
documentation = "https://docs.rs/crate/virtual-filesystem"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/MrElectrify/virtual-fs"
keywords = ["vfs", "filesystem", "virtual", "memory"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duplicate = "1.0"
enumflags2 = "0.7"
itertools = "0.12"
mockall = "0.12"
normalize-path = "0.2"
parking_lot = "0.12"
path-slash = "0.2"
tar = "0.4"
zip = "0.6"

[dev-dependencies]
xz = "0.1"
